pkg/cluster/templates/tpu-device-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tpu-device-plugin
  namespace: kube-system
  labels:
    k8s-app: tpu-device-plugin
spec:
  selector:
    matchLabels:
      name: tpu-device-plugin
  template:
    metadata:
      labels:
        name: tpu-device-plugin
    spec:
      nodeSelector:
        kingc.role/tpu: "true"
      hostNetwork: true
      priorityClassName: system-node-critical
      tolerations:
      - operator: Exists
        effect: NoSchedule
      containers:
      - name: tpu-device-plugin
        image: gcr.io/gke-release/tpu-device-plugin:0.6.1-gke.3@sha256:a0880a8dc4feb45d37c8e70882bf735f8a2ec71d54724c92e0188085825b80c5
        securityContext:
          privileged: true
        volumeMounts:
        - name: device-plugin
          mountPath: /var/lib/kubelet/device-plugins
        - name: sysfs
          mountPath: /sys
      volumes:
      - name: device-plugin
        hostPath:
          path: /var/lib/kubelet/device-plugins
      - name: sysfs
        hostPath:
          path: /sys
