pkg/cluster/templates/dra-tpu-driver.yaml
---
# Source: dra-driver-google-tpu/templates/kubeletplugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: test-dra-dra-driver-google-tpu-kubeletplugin
  namespace: kube-system
  labels:
    helm.sh/chart: dra-driver-google-tpu-0.1.0
    app.kubernetes.io/name: dra-driver-google-tpu
    app.kubernetes.io/instance: test-dra
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: dra-driver-google-tpu
      app.kubernetes.io/instance: test-dra
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dra-driver-google-tpu
        app.kubernetes.io/instance: test-dra
    spec:
      hostNetwork: true
      priorityClassName: system-node-critical
      serviceAccountName: test-dra-dra-driver-google-tpu-service-account
      securityContext:
        {}
      containers:
      - name: tpu-dra-plugin
        securityContext:
          privileged: true
        image: registry.k8s.io/dra-driver-google/dra-driver-google-tpu:v0.1.0
        imagePullPolicy: IfNotPresent
        command: ["tpu-dra-kubeletplugin"]
        resources:
          {}
        volumeMounts:
        - name: plugins-registry
          mountPath: "/var/lib/kubelet/plugins_registry"
        - name: plugins
          mountPath: "/var/lib/kubelet/plugins"
        - name: cdi
          mountPath: /var/run/cdi
        - name: sys
          mountPath: /sys
        - name: proc
          mountPath: /proc
        - name: dev
          mountPath: /dev
        - name: pod-resources
          mountPath: /var/lib/kubelet/pod-resources
        - name: tpu-logs
          mountPath: /tmp/tpu_logs
      - name: sidecar-log-collector
        image: "gcr.io/gke-release/gke-distroless/bash:gke_distroless_20250807.00_p0@sha256:4de2c75a1f363c26c4f74bdd702d313410267c464a059b4fa32ac5d4cf10aba9"
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            cpu: 20m
            memory: 20Mi
          limits:
            memory: 20Mi
        args: [/bin/sh, -c, '
          tail -n+1 -F /tmp/tpu_logs/tpu_driver.INFO & pid=$!;
          trap "kill -15 $pid; wait $pid" SIGTERM;
          wait $pid;
          ']
        volumeMounts:
        - name: tpu-logs
          readOnly: true
          mountPath: /tmp/tpu_logs
      - name: vbar-control-agent
        image: "gcr.io/gke-release/vbar_control_agent@sha256:631a35b6cc0638b3eed328ccea240199043dcfe4bed69c7cfc3d98752faa23fb"
        securityContext:
          privileged: true
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            memory: 150Mi
            cpu: 10m
          limits:
            memory: 150Mi
        command: ["vbar_control_agent_files/bin/vbar_control_agent"]
        args: ['--logtostderr', '--census_enabled=false', '--gid=', '--uid=', '--chroot=']
      volumes:
      - name: plugins-registry
        hostPath:
          path: "/var/lib/kubelet/plugins_registry"
      - name: plugins
        hostPath:
          path: "/var/lib/kubelet/plugins"
      - name: cdi
        hostPath:
          path: /var/run/cdi
      - name: dev
        hostPath:
          path: /dev
          type: DirectoryOrCreate
      - name: pod-resources
        hostPath:
          path: /var/lib/kubelet/pod-resources
          type: DirectoryOrCreate
      - name: tpu-env
        hostPath:
          path: /etc/tpu
          type: DirectoryOrCreate
      - name: tpu-logs
        hostPath:
          path: /tmp/tpu_logs
          type: DirectoryOrCreate
      - name: sys
        hostPath:
          path: /sys
          type: Directory
      - name: proc
        hostPath:
          path: /proc
          type: Directory
      nodeSelector:
        kingc.role/tpu: "true"
---
# Source: dra-driver-google-tpu/templates/validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: resourceslices-policy-test-dra-dra-driver-google-tpu
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["resource.k8s.io"]
      apiVersions: ["v1beta1"]
      operations:  ["CREATE", "UPDATE", "DELETE"]
      resources:   ["resourceslices"]
  matchConditions:
  - name: isRestrictedUser
    expression: >-
      request.userInfo.username == "system:serviceaccount:kube-system:test-dra-dra-driver-google-tpu-service-account"
  variables:
  - name: userNodeName
    expression: >-
      request.userInfo.extra[?'authentication.kubernetes.io/node-name'][0].orValue('')
  - name: objectNodeName
    expression: >-
      (request.operation == "DELETE" ? oldObject : object).spec.?nodeName.orValue("")
  validations:
  - expression: variables.userNodeName != ""
    message: >-
      no node association found for user, this user must run in a pod on a node and ServiceAccountTokenPodNodeInfo must be enabled
  - expression: variables.userNodeName == variables.objectNodeName
    messageExpression: >-
      "this user running on node '"+variables.userNodeName+"' may not modify " +
      (variables.objectNodeName == "" ?"cluster resourceslices" : "resourceslices on node '"+variables.objectNodeName+"'")
---
# Source: dra-driver-google-tpu/templates/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: resourceslices-policy-test-dra-dra-driver-google-tpu
spec:
  policyName: resourceslices-policy-test-dra-dra-driver-google-tpu
  validationActions: [Deny]
  # All ResourceSlices are matched.
